--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -1,157 +1,280 @@
-<!--<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.13/css/intlTelInput.css">
-    <title>Content Manager</title>
-    <link rel="stylesheet" href="https://mbktechstudio.com/Assets/style.css"> 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
     <link rel="icon" type="image/x-icon" href="https://mbktechstudio.com/Assets/Images/dgicon.svg">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-yaml/4.1.0/js-yaml.min.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-</head>
-<header>
-    <nav>
-        <div class="navbar">
-            <div class="logo">
-                <div class="image">
-                    <img src="https://unilib.mbktechstudio.com/Assets/Images/dg.svg" alt="" />
-                </div>
-                <div class="text">
-                    <a href="https://mbktechstudio.com/">MBK Tech Studio</a>
-                </div>
-            </div>
-            <ul class="menu" style="display: none;">
-                <li><a href="#assignments">Assignments</a></li>
-                <div class="cancel-btn">
-                    <i class="fas fa-times"></i>
-                </div>
-            </ul>
-            <div class="media-icons">
-                <a href="https://www.facebook.com/people/MBK-Tech-Studio/61559079077988/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                <a href="https://x.com/ibnekhalid28" target="_blank"><i class="fab fa-twitter"></i></a>
-                <a href="https://instagram.com/mbktech.studios" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://github.com/MIbnEKhalid" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/muhammad-bin-khalid-89711b25b" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://youtube.com/@mibnekhalid" target="_blank"><i class="fab fa-youtube"></i></a>
-                <a href="https://discord.gg/MUAyAeckrM" target="_blank"><i class="fab fa-discord"></i></a>
-            </div>
-            <div class="menu-btn">
-                <i class="fas fa-bars"></i>
-            </div>
-        </div>
-    </nav>
-</header>
-  <style>
-    body,html,.about
-    { 
-        background-image: url('https://docs.mbktechstudio.com/Assets/Images/background.png');
-    }
-     .css-wj9m5t-LoginButton-button-default-gray-disabled {
-        outline: none;
-    padding: 6px 12px;
-    border-radius: 4px;
-    font-size: 15px;
-    font-weight: 600;
-    background: #377a77;
-    color: #fff;
-    border: 2px solid transparent;
-    cursor: pointer;
-    transition: all 0.4s ease;
-    }    
-    .css-wj9m5t-LoginButton-button-default-gray-disabled:hover {
-        border-color: #377a77;
-  background-color: transparent;
-  color: #377a77;
-    }
-  </style>
-<body>
-    <main id="main-content" class="main-class">
-
-    <section class="about">
-             <head>
-                <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-            </head>
-            <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
-     </section>
-</main>
-    
-    <footer>
-        <div class="text">
-            <span>Developed By <a href="https://github.com/MIbnEKhalid">Muhammad Bin Khalid</a> | &#169; 2024 All Rights    Reserved | <a href="https://privacy.mbktechstudio.com/" target="_blank">Terms & Conditions</a> | <a href="mailto:support@mbktechstudio.com">support@mbktechstudio.com</a></span>
-        </div>
-    </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.13/js/intlTelInput-jquery.min.js"></script>
-
+    <title>Admin Panel / Content Manager</title>
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <script>
-    document.addEventListener('DOMContentLoaded', function() {
-        netlifyIdentity.on('init', user => {
-            if (user) {
-                onLoginSuccess();
+        async function fetchDeployStatus() {
+            const siteId = '';
+            const accessToken = '';
+
+            try {
+                const response = await fetch(`https://api.netlify.com/api/v1/sites/${siteId}/deploys`, {
+                    method: 'GET',
+                    headers: {
+                        'Authorization': `Bearer ${accessToken}`,
+                    }
+                });
+
+                if (!response.ok) {
+                    throw new Error('Network response was not ok ' + response.statusText);
+                }
+
+                const deploys = await response.json();
+                const latestDeploy = deploys[0];
+
+                if (latestDeploy) {
+                    const latestDeployState = latestDeploy.state || 'No deployment found';
+                    const deployTime = new Date(latestDeploy.created_at).toLocaleString();
+
+                    document.getElementById('deployStatus').innerText =
+                        `Deployment Status: ${latestDeployState}\nDeployed at: ${deployTime}`;
+
+                    // Fetch the latest commit from GitHub
+                    await fetchLatestCommitTime();
+                    await fetchLatestPushTime(); // Corrected function call
+                } else {
+                    document.getElementById('deployStatus').innerText = 'No deployment found';
+                }
+
+            } catch (error) {
+                document.getElementById('deployStatus').innerText = `Error: ${error.message}`;
             }
+        }
+
+        async function fetchLatestPushTime() {
+            const owner = '42Wor'; // Your GitHub username or organization name
+            const repo = 'maaz-blog'; // Your repository name
+
+            try {
+                const response = await fetch(`https://api.github.com/repos/${owner}/${repo}`, {
+                    method: 'GET',
+                    headers: {
+                        'Accept': 'application/vnd.github.v3+json'
+                        // If you have a GitHub token, you can add an Authorization header
+                        // 'Authorization': `Bearer YOUR_GITHUB_TOKEN`
+                    }
+                });
+
+                if (!response.ok) {
+                    throw new Error('Network response was not ok ' + response.statusText);
+                }
+
+                const repoData = await response.json();
+                const pushTime = new Date(repoData.pushed_at).toLocaleString();
+                document.getElementById('pushTime').innerText = `Latest Push Time: ${pushTime}`;
+            } catch (error) {
+                document.getElementById('pushTime').innerText = `Error: ${error.message}`;
+            }
+        }
+
+
+        async function fetchLatestCommitTime() {
+            const owner = '42Wor'; // Your GitHub username or organization name
+            const repo = 'maaz-blog'; // Your repository name
+            const branch = 'main'; // The branch you want, e.g., 'main'
+
+            try {
+                const response = await fetch(`https://api.github.com/repos/${owner}/${repo}/commits?sha=${branch}`, {
+                    method: 'GET',
+                    headers: {
+                        'Accept': 'application/vnd.github.v3+json'
+                        // If you have a GitHub token, you can add an Authorization header
+                        // 'Authorization': `Bearer YOUR_GITHUB_TOKEN`
+                    }
+                });
+
+                if (!response.ok) {
+                    throw new Error('Network response was not ok ' + response.statusText);
+                }
+
+                const commitData = await response.json();
+
+                // Get the latest commit
+                const latestCommit = commitData[0]; // Latest commit
+                const commitTime = new Date(latestCommit.commit.committer.date).toLocaleString();
+                const commitMessage = latestCommit.commit.message;
+
+                document.getElementById('commitTime').innerText = `Latest Commit Time: ${commitTime}`;
+                document.getElementById('commitMessage').innerText = `Commit Message: ${commitMessage}`;
+            } catch (error) {
+                document.getElementById('commitTime').innerText = `Error: ${error.message}`;
+                document.getElementById('commitMessage').innerText = '';
+            }
+        }
+
+        // Call these functions to fetch and display data
+        window.onload = function () {
+            fetchDeployStatus();
+            fetchLatestPushTime();
+
+            document.getElementById("relAPI").onclick = async function () {
+                console.log('Reloading APIs');
+                await fetchDeployStatus();
+                await fetchLatestPushTime();
+                await fetchLatestCommitTime();
+            };
+        };
+
+
+        document.addEventListener("DOMContentLoaded", function () {
+            fetchDeployStatus();
+            fetchLatestPushTime();
+            fetchLatestCommitTime();
         });
 
-        function onLoginSuccess() {
-            const mainContent = document.getElementById('main-content');
-            document.body.innerHTML = '';
-            document.body.appendChild(mainContent);
+    </script>
+    <style>
+        #nc-root,
+        .nc-gatewayPage {
+            align-items: center;
+            justify-content: center;
+            height: 25vh;
+            margin-top: 15px;
         }
+
+        h1 {
+            margin-bottom: 20px;
+        }
+
+        #deployStatus {
+            font-size: 1.2em;
+            margin-bottom: 20px;
+        }
+
+        .status-list {
+            list-style: none;
+            padding: 0;
+            margin-top: 20px;
+        }
+
+        .status-list li {
+            margin: 5px 0;
+        }
+
+        .deployInfo {
+            max-width: 90%;
+            padding: 20px;
+            background-color: #f7f9fa;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            margin: 20px auto;
+            font-family: Arial, sans-serif;
+
+        }
+
+        .deployInfo h1 {
+            font-size: 1.8em;
+            margin-bottom: 15px;
+            color: #377a77;
+        }
+
+        #deployStatus {
+            font-size: 1.2em;
+            color: #333;
+            margin: 10px 0 20px;
+        }
+
+        /* Centering the Reload API button */
+        .relAPI {
+            outline: none;
+            padding: 10px 20px !important;
+            border-radius: 5px;
+            font-size: 16px;
+            font-weight: 600;
+            background-color: #377a77;
+            color: #fff;
+            border: 2px solid transparent;
+            cursor: pointer;
+            transition: all 0.4s ease;
+            margin: 0 auto 20px;
+            /* Center with margin auto */
+            display: flex;
+            justify-content: center;
+        }
+
+        .relAPI:hover {
+            background-color: transparent;
+            color: #377a77;
+            border-color: #377a77;
+        }
+
+        .status-list {
+            list-style: none;
+            padding: 0;
+            margin-top: 20px;
+            text-align: left;
+        }
+
+        .status-list li {
+            font-size: 0.95em;
+            color: #555;
+            margin: 5px 0;
+            padding: 8px;
+            background-color: #e8f4f4;
+            border-radius: 4px;
+        }
+    </style>
+</head>
+
+<body>
+
+    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+
+    <div class="deployInfo" id="deployInfo">
+
+         <a onclick="nflexLoading()"><i></i>close</a>
+
+        <h1>Netlify Deployment Status</h1>
+        <p id="deployStatus">Loading...</p>
+
+        <h1>GitHub Repo Status</h1>
+        <p id="pushTime">Loading push commit time...</p>
+        <p id="commitTime">Loading latest commit time...</p>
+        <p id="commitMessage">Loading commit message...</p>
+
+        <button class="relAPI" id="relAPI">Reload API</button>
+
+        This section contains a list of Netlify Deployment Statuses and their corresponding descriptions:
+        <ul class="status-list">
+            <li>new = Project Deployment Is triggered and new deployment is added</li>
+            <li>enqueued = Deployment Is Starting Up</li>
+            <li>building = Project Is Building</li>
+            <li>error = Project Build Failed</li>
+            <li>ready = Project Build Successfull and site is Published</li>
+        </ul>
+        <a class="relAPI" href="DeployInfo/">Deploy Info</a>
+
+    </div>
+
+</body>
+<script>
+    function flexLoading() {
+        document.querySelectorAll('#nc-root, .nc-gatewayPage').forEach(element => {
+            element.style.display = 'flex';
+        });
+    }
+    function nflexLoading() {
+        document.querySelectorAll('#nc-root, .nc-gatewayPage').forEach(element => {
+            element.style.display = 'block';
+        });
+        document.getElementById('deployInfo').style.display = 'none';
+    }
+
+    document.addEventListener('DOMContentLoaded', function () {
+        
+        flexLoading();
     });
-        // Sticky Navigation Menu JS Code
-        let nav = document.querySelector("nav");
-        let scrollBtn = document.querySelector(".scroll-button a");
-        console.log(scrollBtn);
-        let val;
-        window.onscroll = function() {
-                if (document.documentElement.scrollTop > 20) {
-                    nav.classList.add("sticky");
-                    scrollBtn.style.display = "block";
-                } else {
-                    nav.classList.remove("sticky");
-                    scrollBtn.style.display = "none";
-                }
-            }
-            // Side NavIgation Menu JS Code
-        let body = document.querySelector("body");
-        let navBar = document.querySelector(".navbar");
-        let menuBtn = document.querySelector(".menu-btn");
-        let cancelBtn = document.querySelector(".cancel-btn");
-        menuBtn.onclick = function() {
-            navBar.classList.add("active");
-            menuBtn.style.opacity = "0";
-            menuBtn.style.pointerEvents = "none";
-            // body.style.overflow = "hidden";
-            scrollBtn.style.pointerEvents = "none";
-        }
-        cancelBtn.onclick = function() {
-                navBar.classList.remove("active");
-                menuBtn.style.opacity = "1";
-                menuBtn.style.pointerEvents = "auto";
-                body.style.overflow = "auto";
-                scrollBtn.style.pointerEvents = "auto";
-            }
-            // Side Navigation Bar Close While We Click On Navigation Links
-        let navLinks = document.querySelectorAll(".menu li a");
-        for (var i = 0; i < navLinks.length; i++) {
-            navLinks[i].addEventListener("click", function() {
-                navBar.classList.remove("active");
-                menuBtn.style.opacity = "1";
-                menuBtn.style.pointerEvents = "auto";
-            });
-        }
-  
-          </script>
+
+</script>
+
+</html>
 </body>
 
-</html>-->
-    <main id="main-content" class="main-class">
-
-    <section class="about">
-             <head>
-                <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-            </head>
-            <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
-     </section>
-</main>
+</html>
