Update and rename public/public/DeployInfo/index.html to public/DeployInfo/index.html

--- a/public/DeployInfo/index.html
+++ b/public/DeployInfo/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
-    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/MIbnEKhalid/Blog.MIbnEKhalid.github.io/main/src/components/icons/adminIconShield.svg">
+    <link rel="icon" type="image/x-icon" href="https://maazwaheed.netlify.app/Assets/Images/M.pn">
     <title>Admin Panel / Content Manager</title>
     <style>
         /* Background gradient */
